<resources>
    <string name="app_name">LiveStory</string>
    <string name="invalid_email"> invalid Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name_required">Name is required!</string>
    <string name="email_valid">Valid</string>
    <string name="email_invalid">Invalid</string>
    <string name="password_required">input Password </string>
    <string name="password_valid"> Password valid </string>
    <string name="password_invalid"> Password invalid </string>
    <string name="register">Register</string>
    <string name="warning_password">Password must be more than 6 character</string>
    <string name="warning_email">Invalid email</string>
    <string name="if_you_don_t_have_account_signup">if you don\'t have account, Signup</string>
    <string name="nama">Nama</string>
    <string name="caution">Caution !!!</string>
    <string name="To_do">Do you want to logout ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="camera">camera</string>
    <string name="upload_photo">upload photo</string>
    <string name="getgallery">getgallery</string>
    <string name="add_a_caption">add a caption</string>
    <string name="message_error">upload failed</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_story">MapsStory</string>
    <string name="retry">retry</string>

</resources>