<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addlivestory.AddStoryActivity">

    <ProgressBar
        android:id="@+id/progressBar_Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="251dp"
        android:autofillHints="Description"
        android:gravity="top|left"
        android:hint="@string/add_a_caption"
        android:inputType="textMultiLine"
        android:maxWidth="360dp"
        android:maxHeight="180dp"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/btn_gallery"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/photo_fix"
        android:text="@string/getgallery"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edt_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/camerafix"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_gallery"
        app:layout_constraintTop_toBottomOf="@+id/edt_description" />

    <Button
        android:id="@+id/add_story"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/upload_photo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>